tests/snapshots/examples_fixtures/errors__ModuleMultipleModulesError.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/ModuleMultipleModulesError.flx
== compile ==
failed (module)
== diagnostics ==
Error[E023]: Multiple Modules

File contains multiple module declarations.

  examples/errors/ModuleMultipleModulesError.flx:0:1
  |

Hint:
  Each file should contain only one module declaration.
== stdout ==
<not executed>
