tests/snapshots/examples_fixtures/errors__Prism.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/Prism.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E007]: Duplicate Parameter

Duplicate parameter name: `x`.

  examples/errors/Prism.flx:0:1
  |

Hint:
  Each parameter must have a unique name.
== stdout ==
<not executed>
