tests/snapshots/examples_fixtures/errors__ScriptOnly.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/ScriptOnly.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
