tests/snapshots/examples_fixtures/errors__module_name_clobber_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/module_name_clobber_error.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
