tests/snapshots/examples_fixtures/errors__private_member_multiline_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/private_member_multiline_error.flx
== compile ==
failed (module)
== diagnostics ==
Error[E023]: Multiple Modules

File contains multiple module declarations.

  examples/errors/private_member_multiline_error.flx:0:1
  |

Hint:
  Each file should contain only one module declaration.
== stdout ==
<not executed>
